--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,10 @@
 * {
-
-  font-family: 'Raleway', sans-serif;
-
+  margin: o;
+  padding: 0;
+  font-family: "Raleway", sans-serif;
 }
 
-
-
-
-
-
-
 header {
-
   height: 8vh;
 
   display: flex;
@@ -25,20 +18,10 @@ header {
   padding: 1%;
 
   background-color: rgba(117, 158, 218, 255);
-
-
-
-
 }
 
-
-
-
 .button {
-
   height: 80%;
-
-  
 
   padding: 1%;
 
@@ -51,14 +34,9 @@ header {
   font-size: 20px;
 
   cursor: pointer;
-
 }
 
-
-
-
 #country {
-
   border: none;
 
   height: 80%;
@@ -70,40 +48,19 @@ header {
   color: white;
 
   font-size: 20px;
-
-
-
-
 }
-
-
-
 
 #country::placeholder {
-
   color: rgba(255, 255, 255, 0.753);
-
 }
 
-
-
-
-
-
-
 #country:focus {
-
   border-bottom: 1px solid white;
 
   outline: none;
-
 }
 
-
-
-
 main {
-
   display: flex;
 
   flex-direction: column;
@@ -115,34 +72,15 @@ main {
   align-items: center;
 
   padding: 3%;
-
-
-
-
 }
 
-
-
-
 .nowImg {
-
   width: 60%;
 
   height: 60%;
-
-
-
-
 }
 
-
-
-
-
-
-
 .nowWeather {
-
   width: 40%;
 
   height: 40%;
@@ -160,36 +98,22 @@ main {
   display: flex;
 
   flex-direction: column;
-
 }
 
-
-
-
 #title {
-
   color: white;
 
   font-size: 25px;
 
   font-weight: bold;
-text-align: center;
+  text-align: center;
 }
-
-
-
 
 #weatherNowTemp {
-
   font-size: 20px;
-
 }
 
-
-
-
 .dayweather {
-
   display: flex;
 
   flex-direction: row;
@@ -199,17 +123,9 @@ text-align: center;
   width: 80%;
 
   margin-top: 5%;
-
 }
 
-
-
-
-
-
-
 .timedetail {
-
   display: flex;
 
   flex-direction: column;
@@ -223,66 +139,35 @@ text-align: center;
   color: #171780;
 
   font-size: 20px;
-
-
-
-
 }
 
-
-
-
 .wImg {
-
   width: 70%;
 
   height: 70%;
-
 }
 
-
-
-
 .para {
-
   color: #171780;
 
   font-size: 22px;
-
 }
 
-
-
-
 .para2 {
-
   color: #171780;
 
   font-size: 18px;
-
-
-
-
 }
 
-
-
-
 .a {
-
   margin: 15px;
 
   color: #030348;
 
   font-weight: bold;
-
 }
 
-
-
-
 .weatherTemp {
-
   font-size: 25px;
 
   font-weight: bold;
@@ -290,34 +175,18 @@ text-align: center;
   margin: 10px;
 
   color: #030348;
-
 }
-
-
-
 
 .detailsT {
-
   font-weight: bold;
-
 }
 
-
-
-
-@media (max-width:600px) {
-
+@media (max-width: 600px) {
   main {
-
     height: auto;
-
   }
 
-
-
-
   header {
-
     display: flex;
 
     flex-direction: row;
@@ -327,33 +196,16 @@ text-align: center;
     align-items: center;
 
     padding: 2%;
-
-
-
-
   }
-
-
-
 
   .button,
-
   #country {
-
-  font-size: 15px;
+    font-size: 15px;
 
     width: 40%;
-
-
-
-
   }
 
-
-
-
   .dayweather {
-
     display: flex;
 
     flex-direction: column;
@@ -363,14 +215,9 @@ text-align: center;
     width: 80%;
 
     margin: auto;
-
   }
 
-
-
-
   .timedetail {
-
     display: flex;
 
     flex-direction: row;
@@ -378,20 +225,9 @@ text-align: center;
     justify-content: space-evenly;
 
     align-items: center;
-
   }
 
-
-
-
-
-
-
-
-
-
   .nowWeather {
-
     width: 100%;
 
     height: 40%;
@@ -407,63 +243,33 @@ text-align: center;
     display: flex;
 
     flex-direction: column;
-
   }
 
-
-
-
   .wImg {
-
     width: 20%;
 
     height: 20%;
-
   }
 
-
-
-
   .para {
-
     color: #171780;
 
     font-size: 18px;
-
   }
 
-
-
-
   .para2 {
-
     color: #171780;
 
     font-size: 16px;
-
-
-
-
   }
-
 }
 
-
-
-
-@media (max-width:300px) {
-
+@media (max-width: 300px) {
   .para {
-
     font-size: 16px;
-
   }
 
-
-
-
   .weatherTemp {
-
     font-size: 18px;
 
     font-weight: bold;
@@ -471,64 +277,25 @@ text-align: center;
     margin: 13px;
 
     color: #030348;
-
   }
 
-
-
-
   .button,
-
   #country {
-
     font-size: 10px;
 
     width: 40%;
-
-
-
-
   }
-
-
-
 
   .para2 {
-
     font-size: 13px;
-
-
-
-
   }
-
-
-
 
   .button,
-
   #country {
-
     font-size: 10px;
-
-
-
-
   }
-
-
-
 
   .timedetail {
-
-
-
-
     font-size: 13px;
-
-
-
-
   }
-
 }
