--- a/src/App.css
+++ b/src/App.css
@@ -1,112 +1,84 @@
+
+
 * {
-  margin: o;
-  padding: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
+.app{
+  height: 100vh;
+  background-color: rgba(156, 206, 244, 255);
+}
 header {
   height: 8vh;
-
   display: flex;
-
   flex-direction: row;
-
   align-items: center;
-
   column-gap: 2%;
-
   padding: 1%;
-
   background-color: rgba(117, 158, 218, 255);
+
 }
 
-.button {
+.btn {
   height: 80%;
-
   padding: 1%;
-
   color: black;
-
   background-color: rgb(88, 121, 199, 255);
-
   border: none;
-
   font-size: 20px;
-
   cursor: pointer;
 }
 
-#country {
+#city {
   border: none;
-
   height: 80%;
-
   width: 20%;
-
   background-color: transparent;
-
   color: white;
-
   font-size: 20px;
+
 }
 
-#country::placeholder {
+#city::placeholder {
   color: rgba(255, 255, 255, 0.753);
 }
 
-#country:focus {
-  border-bottom: 1px solid white;
 
+#city:focus {
+  border-bottom: 1px solid white;
   outline: none;
 }
 
-main {
+.main {
   display: flex;
-
   flex-direction: column;
-
   background-color: rgba(156, 206, 244, 255);
-
-  height: 100vh;
-
   align-items: center;
-
-  padding: 3%;
+  height: 100%;
 }
 
 .nowImg {
-  width: 60%;
-
-  height: 60%;
+  width: 70%;
+  height: 70%;
 }
 
+
 .nowWeather {
-  width: 40%;
-
-  height: 40%;
-
+  width: 50%;
+  height: 50%;
   text-align: center;
-
   justify-self: center;
-
   align-self: center;
-
   justify-content: space-between;
-
   align-items: center;
-
   display: flex;
-
   flex-direction: column;
 }
 
-#title {
+#weatherNowTitle {
   color: white;
-
   font-size: 25px;
-
   font-weight: bold;
-  text-align: center;
 }
 
 #weatherNowTemp {
@@ -115,65 +87,49 @@ main {
 
 .dayweather {
   display: flex;
-
   flex-direction: row;
-
   justify-content: space-between;
-
   width: 80%;
-
-  margin-top: 5%;
+  padding-top: 3%;
 }
 
 .timedetail {
   display: flex;
-
   flex-direction: column;
-
   align-items: center;
-
   justify-content: space-around;
-
   height: auto;
-
   color: #171780;
-
   font-size: 20px;
+
 }
 
 .wImg {
   width: 70%;
-
   height: 70%;
 }
 
 .para {
   color: #171780;
-
   font-size: 22px;
 }
 
 .para2 {
   color: #171780;
-
   font-size: 18px;
+
 }
 
 .a {
   margin: 15px;
-
   color: #030348;
-
   font-weight: bold;
 }
 
 .weatherTemp {
   font-size: 25px;
-
   font-weight: bold;
-
   margin: 10px;
-
   color: #030348;
 }
 
@@ -181,121 +137,103 @@ main {
   font-weight: bold;
 }
 
-@media (max-width: 600px) {
-  main {
+@media (max-width:600px) {
+  .main {
     height: auto;
   }
 
   header {
     display: flex;
-
     flex-direction: row;
-
     justify-content: space-evenly;
-
     align-items: center;
-
     padding: 2%;
+
   }
 
-  .button,
-  #country {
-    font-size: 15px;
-
+  .btn,
+  #city {
+  font-size: 15px;
     width: 40%;
+
   }
 
   .dayweather {
     display: flex;
-
     flex-direction: column;
-
     justify-content: space-between;
-
     width: 80%;
-
     margin: auto;
   }
 
   .timedetail {
     display: flex;
-
     flex-direction: row;
-
     justify-content: space-evenly;
-
     align-items: center;
   }
 
   .nowWeather {
     width: 100%;
-
     height: 40%;
-
     justify-self: center;
-
     align-self: center;
-
     justify-content: center;
-
     align-items: center;
-
     display: flex;
-
     flex-direction: column;
   }
 
   .wImg {
     width: 20%;
-
     height: 20%;
   }
 
   .para {
     color: #171780;
-
     font-size: 18px;
   }
 
   .para2 {
     color: #171780;
-
     font-size: 16px;
+
   }
 }
 
-@media (max-width: 300px) {
+@media (max-width:300px) {
   .para {
     font-size: 16px;
   }
 
   .weatherTemp {
     font-size: 18px;
-
     font-weight: bold;
-
     margin: 13px;
-
     color: #030348;
   }
 
-  .button,
-  #country {
+  .btn,
+  #city {
     font-size: 10px;
-
     width: 40%;
+
   }
 
   .para2 {
     font-size: 13px;
+
   }
 
-  .button,
-  #country {
+  .btn,
+  #city {
     font-size: 10px;
+
   }
 
   .timedetail {
+
     font-size: 13px;
+
   }
 }
